<?xml version="1.0"?>
<package>
  <name>roomba_robin_rviz_launchers</name>
  <version>1.0.0</version>
  <description>Launchers for visualizing TurtleBot with JKU Stack</description>
  <maintainer email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_rviz_launchers</url>
  <url type="repository">https://github.com/robinJKU/roomba_robin_viz</url>
  <url type="bugtracker">https://github.com/robinJKU/roomba_robin_viz/issues</url>
  <author email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>roomba_robin_bringup</run_depend>
</package>
